Bug 112241 - bad column width behavior in new customize dialog
Summary: bad column width behavior in new customize dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Muhammet Kara
URL:
Whiteboard: target:6.0.0
Keywords:
Depends on:
Blocks: Customise-Dialog
  Show dependency treegraph
 
Reported: 2017-09-05 15:53 UTC by Regina Henschel
Modified: 2017-09-13 07:02 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2017-09-05 15:53:17 UTC
The left list with the not used commands is far to small. In the default width not all items are entire visible. The paired field with the command description is so small, that it nearly always needs the vertical scrollbar. Whereas 1/3 of the right list is unused white space.

On my screen the default width is 8cm for the left list and 11cm for the right list. It will become worse, when the left lists gets icons too.

The left list has always a horizontal scrollbar.
Comment 1 Heiko Tietze 2017-09-11 11:37:30 UTC
While the needed space depends on the theme and the width is sufficient here, it is always good to provide options to adjust the UI. Ideally we place a splitter between the left part of the UI from search to description. This control would be placed in the background of add/remove, which is quite uncommon. Alternatively, on resize both the left and right part resize equally. Muhammet, what is possible?
Comment 2 Yousuf Philips (jay) (retired) 2017-09-11 13:53:34 UTC
On my screen, only in the menus tab is the left column to small (this is caused by the long tree paths found in the menu category drop down list). I would assume the simplest thing would be to have both columns containing the function lists should have the same size.
Comment 3 Commit Notification 2017-09-12 19:48:46 UTC
Muhammet Kara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e970395c692a5c315914ddf5b43cf01e590345ff

tdf#112241: Improve column width behaviour in Customize dialog

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Muhammet Kara 2017-09-13 07:02:14 UTC
Both lists are now equally sized (the left one got larger). And the dialog can also be resized by the user if needed.