tdf#112241: Improve column width behaviour in Customize dialog

Also:
 * Remove unnecessary frame "contents"
 * Remove unnecessary alignment
 * Remove extra column from the left grid (grid4)
 * Move all into a new grid for better sizing

Change-Id: I4d805a800ca6e487bf788cd9401e5f77303ddd1d