cui/source/inc/cfg.hxx
@@ -399,7 +399,6 @@ protected:
     // Used to add and remove toolbars/menus
     VclPtr<PushButton>                         m_pPlusBtn;
     VclPtr<PushButton>                         m_pMinusBtn;
-    VclPtr<VclFrame>                           m_pContents;
     VclPtr<VclContainer>                       m_pEntries;
     VclPtr<SvTreeListBox>                      m_pContentsListBox;
 
